@@ -28,6 +28,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   behavior that sort vocabularies alphabetically
 - Make sure we do not notify several times the same email address.  More over, if a recipient has no fullname, use
   the user id to build recipient string "user_id <email@test.org>"
+- Added styles 'highlight-blue' and 'highlight-green' useable in CKeditor
 
 4.1b4 (2018-01-31)
 ------------------
